--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 	},
 	"dependencies": {
 		"@tailwindcss/vite": "^4.1.13",
+		"@vercel/speed-insights": "^1.2.0",
 		"gsap": "^3.13.0"
 	},
 	"type": "module"
